--- a/index.html
+++ b/index.html
@@ -561,6 +561,42 @@
             </div>
         </div>
     </section>
+    <section class="">
+        <div class="container-xxl">
+            <div class="text-center pt-5 pb-4">
+                <h3 class="fs-5 text-info">What's Going On</h3>
+                <h2 class="display-3 fw-bold text-dark">Latest stories</h2>
+            </div>       
+            <div class="row pb-5">
+                <div class="col-md-6">
+                    <div class="rounded-4 shadow-lg p-4">
+                        <div class="row">
+                            <div class="col-6">
+                                <img class="img-fluid rounded-4" src="images/stories/img-1.png" alt="">
+                            </div>
+                            <div class="col-6 align-self-center p-0">
+                                <p class="m-0 fs-5">Take Some Time and Meet <br>Our Employees?</p><br>
+                                <p class="m-0 fs-5 text-info">Request Quote &rarr;</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="rounded-4 shadow-lg p-4">
+                        <div class="row">
+                            <div class="col-6">
+                                <img class="img-fluid rounded-4" src="images/stories/img-2.png" alt="">
+                            </div>
+                            <div class="col-6 align-self-center p-0">
+                                <p class="m-0 fs-5">Need Dedicated <br>Developer?</p><br>
+                                <p class="m-0 fs-5 text-info">Hire Now &rarr;</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="bg-info">
         <div class="container-xxl">
             <div class="row">
