added new content to footer

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     <section class="bg-dark">
         <div class="container-xxl pt-5">
             <div class="pt-5">
-                <div class="pt-5">
+                <div class="pt-5 d-flex justify-content-md-start justify-content-center">
                     <h3 class="fs-5 text-info">What We Can Do For You</h3>
                 </div>
                 <div>
-                    <h2 class="display-3 fw-bold text-light">
+                    <h2 class="display-3 fw-bold text-light d-flex justify-content-md-start justify-content-center">
                         Services we can
                         <br>
                         help you with
@@ -447,27 +447,27 @@
                 <h2 class="display-3 fw-bold text-light">Our Specializations</h2>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-md-3 col-sm-6 p-4 text-center text-light">
+                <div class="col-lg-2 col-md-4 p-4 text-center text-light">
                     <span class="display-5 fw-bold text-info">75%</span>
                     <p class="fw-semibold fs-5 lh-lg">Development</p>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6 p-4 text-center text-light">
+                <div class="col-lg-2 col-md-4 p-4 text-center text-light">
                     <span class="display-5 fw-bold text-info">95%</span>
                     <p class="fw-semibold fs-5 lh-lg">CSS</p>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6 p-4 text-center text-light">
+                <div class="col-lg-2 col-md-4 p-4 text-center text-light">
                     <span class="display-5 fw-bold text-info">95%</span>
                     <p class="fw-semibold fs-5 lh-lg">HTML</p>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6 p-4 text-center text-light">
+                <div class="col-lg-2 col-md-4 p-4 text-center text-light">
                     <span class="display-5 fw-bold text-info">80%</span>
                     <p class="fw-semibold fs-5 lh-lg">PSD</p>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6 p-4 text-center text-light">
+                <div class="col-lg-2 col-md-4 p-4 text-center text-light">
                     <span class="display-5 fw-bold text-info">60%</span>
                     <p class="fw-semibold fs-5 lh-lg">Graphics Design</p>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6 p-4 text-center text-light">
+                <div class="col-lg-2 col-md-4 p-4 text-center text-light">
                     <span class="display-5 fw-bold text-info">90%</span>
                     <p class="fw-semibold fs-5 lh-lg">Testing</p>
                 </div>
@@ -483,7 +483,7 @@
                 </h2>
             </div>
             <div class="row mb-5">
-                <div class="col-md-6">
+                <div class="col-md-6 pb-4">
                     <div class="border-top border-3 border-info shadow-sm p-4">
                         <p>
                             The team did well and did exactly as asked and what was required. He <br>
@@ -503,7 +503,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 pb-4">
                     <div class="border-top border-3 border-info shadow-sm p-4">
                         <p class="fs-6 mb-">
                             Excellent communication and quality work. Very responsible workers <br>
@@ -532,7 +532,7 @@
                 <h2 class="display-3 fw-bold text-dark">Latest stories</h2>
             </div>       
             <div class="row pb-5">
-                <div class="col-md-6">
+                <div class="col-md-6 pb-4">
                     <div class="rounded-4 shadow-lg p-4">
                         <div class="row">
                             <div class="col-6">
@@ -545,7 +545,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 pb-4">
                     <div class="rounded-4 shadow-lg p-4">
                         <div class="row">
                             <div class="col-6">
@@ -561,49 +561,175 @@
             </div>
         </div>
     </section>
-    <section class="">
-        <div class="container-xxl">
-            <div class="text-center pt-5 pb-4">
-                <h3 class="fs-5 text-info">What's Going On</h3>
-                <h2 class="display-3 fw-bold text-dark">Latest stories</h2>
-            </div>       
-            <div class="row pb-5">
-                <div class="col-md-6">
-                    <div class="rounded-4 shadow-lg p-4">
-                        <div class="row">
-                            <div class="col-6">
-                                <img class="img-fluid rounded-4" src="images/stories/img-1.png" alt="">
-                            </div>
-                            <div class="col-6 align-self-center p-0">
-                                <p class="m-0 fs-5">Take Some Time and Meet <br>Our Employees?</p><br>
-                                <p class="m-0 fs-5 text-info">Request Quote &rarr;</p>
-                            </div>
-                        </div>
+    <section class="bg-info pt-5 mb-5">
+        <div class="container-xxl border-bottom border-secondary">
+            <div class="row ">
+                <div class="col"></div>
+                <div class="col-md-3 p-2 border">
+                    <div class="d-flex text-center align-items-center justify-content-center p-2">
+                        <img src="images/indian-flag.png" height="30" width="50" class="img-fluid me-3 rounded-2" alt="ind-flag">
+                        <p class="m-0 text-light fw-bold fs-5">India</p>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="rounded-4 shadow-lg p-4">
-                        <div class="row">
-                            <div class="col-6">
-                                <img class="img-fluid rounded-4" src="images/stories/img-2.png" alt="">
-                            </div>
-                            <div class="col-6 align-self-center p-0">
-                                <p class="m-0 fs-5">Need Dedicated <br>Developer?</p><br>
-                                <p class="m-0 fs-5 text-info">Hire Now &rarr;</p>
-                            </div>
-                        </div>
+                <div class="col-md-3 p-2 border">
+                    <div class="d-flex text-center align-items-center justify-content-center">
+                        <img src="images/australia.png" height="30" width="50" class="img-fluid me-3" alt="aus-flag">
+                        <p class="m-0 text-light fw-bold fs-5">Australia</p>
                     </div>
                 </div>
+                <div class="col"></div>
+            </div>
+            <h2 class="display-3 fw-bold text-light text-center">Lets Work Together</h2>
+            <div class="text-center align-items-center justify-content-center mt-5 py-3 px-4">
+                <a href="" class="py-3 px-4 bg-light rounded-4 text-decoration-none text-dark">View More Work</a>
+            </div>
+            <div class="text-center align-items-center justify-content-center pt-5">
+                <img src="images/work-t.png" class="img-fluid" alt="">
             </div>
         </div>
     </section>
-    <section class="bg-info">
+    <footer>
         <div class="container-xxl">
             <div class="row">
-                <div class="col"></div>
-                <div class="col">sdf</div>
-                <div class="col">fsf</div>
-                <div class="col"></div>
+                <div class="col-lg-6">
+                    <div class="row pb-3">
+                        <div class="col-md-6 p-2">
+                            <div>
+                                <img src="images/header-logo.png" class="img-fluid" alt="marquee-logo">
+                            </div>
+                        </div>
+                        <div class="col-md-6 p-2">
+                            <div class="d-flex align-self-end justify-content-md-end">
+                                <img src="images/facebook-logo.png" height="25" width="25" class="img-fluid" alt="facebook-logo">
+                                <img src="images/linkedin-logo.png" height="25" width="25" class="img-fluid me-5" alt="linkedin-logo">
+                            </div>
+                        </div>
+                    </div>
+                    <hr class="d-md-none py-2">
+                    <div class="row pb-3">
+                        <div class="col-md-6 pb-3">
+                            <div class="d-flex">
+                                <div class="">
+                                    <img src="images/indian-flag.png" height="16" width="25" class="img-fluid" alt="">
+                                </div>
+                                <div class="ms-3">
+                                    <span class="fs-5 fw-bold">Registered Office - Surat</span>
+                                    <p>34, 2nd Floor, Vandna Soc, Nana Varachha, Surat 395006, INDIA</p>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <div class="">
+                                    <img src="images/message.png" height="20" width="25" class="img-fluid" alt="">
+                                </div>
+                                <div class="ms-3">
+                                    <span class="fs-5 fw-bold">Mail Us</span>
+                                    <p>info@marqueesolution.com</p>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <div class="">
+                                    <img src="images/call.png" height="16" width="25" class="img-fluid" alt="">
+                                </div>
+                                <div class="ms-3">
+                                    <span class="fs-5 fw-bold">Call Us</span>
+                                    <p>+91 99781 55166</p>
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="d-md-none py-2">
+                        <div class="col-md-6">
+                            <div class="d-flex">
+                                <div class="">
+                                    <img src="images/australia-flag.jpg" height="16" width="25" class="img-fluid" alt="">
+                                </div>
+                                <div class="ms-3">
+                                    <span class="fs-5 fw-bold">Registered Office - Australia</span>
+                                    <p>18/5 Thomas Carr Drive Tarneit Victoria 3029</p>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <div class="">
+                                    <img src="images/message.png" height="16" width="25" class="img-fluid" alt="">
+                                </div>
+                                <div class="ms-3">
+                                    <span class="fs-5 fw-bold">Mail Us</span>
+                                    <p>info@marqueesolution.com.au</p>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <div class="">
+                                    <img src="images/call.png" height="16" width="25" class="img-fluid" alt="">
+                                </div>
+                                <div class="ms-3">
+                                    <span class="fs-5 fw-bold">Call Us</span>
+                                    <p>+61 466 755 766</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr class="d-lg-none py-2">
+                <div class="col-lg-6">
+                    <div class="row ps-5">
+                        <div class="col-md-4 pb-3">
+                            <div>
+                                <div class="mb-4">
+                                    <h3 class="fs-5">Company</h3>
+                                </div>
+                                <div class="">
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Services</span></a></div>
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>About Us</span></a></div>
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Career</span></a></div>
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Get In Touch</span></a></div>                                
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 pb-3">
+                            <div>
+                                <div class="mb-4">
+                                    <h3 class="fs-5">Web Development</h3>
+                                </div>
+                                <div class="">
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Asp.net & Mvc</span></a></div>
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>PHP / Wordpress</span></a></div>
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Java</span></a></div>
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Drupal</span></a></div>
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Magento</span></a></div>                                
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 pb-3">
+                            <div>
+                                <div class="mb-4">
+                                    <h3 class="fs-5">Other Services</h3>
+                                </div>
+                                <div class="">
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Web App</span></a></div>
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Mobile App</span></a></div>
+                                    <div class="mb-3"><a href="#" class="text-decoration-none text-dark"><span>Quality Assurance</span></a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <hr class="container-xxl">
+    <section>
+        <div class="container-xxl py-3">
+            <div class="row">
+                <div class="col-md-6 p-2">
+                    <div class="d-flex justify-content-md-start justify-content-center">
+                        <p class="m-0">© 2022. All rights reserved by Marquee Solution.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 p-2">
+                    <div class="d-flex justify-content-md-end justify-content-center">
+                        <a href="#" class="text-decoration-none text-dark">Privacy Policy</a>
+                        <a href="#" class="text-decoration-none text-dark ms-3">Terms of Use</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
